--- a/.travis.yml
+++ b/.travis.yml
@@ -6,21 +6,14 @@ cache:
     - "$HOME/.m2"
 
 before_cache:
-  - rm -rf $HOME/.m2/repository/com/ssubijana
+  - rm -rf $HOME/.m2/repository/com/ssubijana/hello-micronaut
 
 before_install:
-  - wget https://github.com/codacy/codacy-coverage-reporter/releases/download/4.0.3/codacy-coverage-reporter-4.0.3-assembly.jar
-
-script:
-  - mvn clean install
+  - sudo apt-get install jq
+  - wget -O ~/codacy-coverage-reporter-assembly-latest.jar $(curl https://api.github.com/repos/codacy/codacy-coverage-reporter/releases/latest | jq -r .assets[0].browser_download_url)
 
 after_success:
-  - java -jar codacy-coverage-reporter-4.0.3-assembly.jar report -l Java -r target/jacoco/it/jacoco.xml --partial
-  - java -jar codacy-coverage-reporter-4.0.3-assembly.jar report -l Java -r target/jacoco/ut/jacoco.xml --partial
-  - java -jar codacy-coverage-reporter-4.0.3-assembly.jar final
+  - java -jar ~/codacy-coverage-reporter-assembly-latest.jar report -l Java -r target/jacoco/jacoco.xml
 
 jdk:
   - oraclejdk8
-
-
-
